Bevel tool produces unwanted distortion with "skewed" meshes #33906

Closed
opened 2013-01-17 13:59:24 +01:00 by Moolah Nasreddin · 6 comments

%%%--- Operating System, Graphics card ---

WinXP SP3, 32bit, NV GeForce GTS 450

- Blender version with error, and version that worked ---

r53873, don't remember if it worked properly because the tool is almost new

- Short description of error ---

Bevel with Segments more than 1 (so it's rounded) produces very noticeable distortions of the source flat surfaces. Saying simpler: what was flat becomes "not flat" but intended to be flat.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  • activate Bevel
  • make it's Offset 1.0 or bigger (so the artifact will be really noticeable)
  • increase the number of segments (more than 1)

From the view in my .blend (Front Ortho) it becomes visible how it makes an undesirable "arc" in X direction.

This doesn't happens with a simple cube like forms or any meshes where adjacent faces forms 90 degree angle.

P.S. It's not crucial when you're making some organic forms or really "freestyle" designs without thinking of some precision. But for making some "flat" vehicles for games (as an example) it becomes a "time eater". Currently I use round_bevel script for this job but it's buggy, leaves some new unwanted faces and crashes sometimes. BUT it's bevel works perfectly in such cases. So maybe it can be a clue for this...

Thanks for you work, guys! :)%%%

%%%--- Operating System, Graphics card --- WinXP SP3, 32bit, NV GeForce GTS 450 - Blender version with error, and version that worked --- r53873, don't remember if it worked properly because the tool is almost new - Short description of error --- Bevel with Segments more than 1 (so it's rounded) produces very noticeable distortions of the source flat surfaces. Saying simpler: what was flat becomes "not flat" but intended to be flat. - Steps for others to reproduce the error (preferably based on attached .blend file) --- - activate Bevel - make it's Offset 1.0 or bigger (so the artifact will be really noticeable) - increase the number of segments (more than 1) From the view in my .blend (Front Ortho) it becomes visible how it makes an undesirable "arc" in X direction. This doesn't happens with a simple cube like forms or any meshes where adjacent faces forms 90 degree angle. P.S. It's not crucial when you're making some organic forms or really "freestyle" designs without thinking of some precision. But for making some "flat" vehicles for games (as an example) it becomes a "time eater". Currently I use round_bevel script for this job but it's buggy, leaves some new unwanted faces and crashes sometimes. BUT it's bevel works perfectly in such cases. So maybe it can be a clue for this... Thanks for you work, guys! :)%%%

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Thanks, I see the problem. Will work on a fix, but not immediately (something else on the top of my things-to-work on in fixing bevel).
%%%

%%%Thanks, I see the problem. Will work on a fix, but not immediately (something else on the top of my things-to-work on in fixing bevel). %%%
Member

%%%Fixed in svn, r54231.%%%

%%%Fixed in svn, r54231.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%Hi, Howard!
Thank you! Now it works in simple cases.

I think maybe you know about another problem but for some case I'm attaching the new file.

Bevel_distorts_Mesh_2.blend
There if you'll bevel selected loops it will give distorted surfaces and wrong forms of circles (bevel shape).

I thought about the design...
Check approach_thought1.blend

When you scale points "B" and "C" about the Cursor they "prove" the flatness of the "formed" faces around point "A".
So there is the angle "A-Cursor-B" - these edges form the triangle (at least virtually). And there is the virtual angle "D"="LocalZAxis-Cursor-B"
If we'll set the Cursor to "A" so it will be the Cursor now and there will be the new "A", "B" and "C" (adjacent points). So here will be new "D"="D2"
And obviously if it's equal to D than the face is planar. By the same approach can be checked the face on another side of the edge to be beveled.

The idea is that bevel components here can be flattened (or projected probably) on these faces if they (faces) are flat.

I'm not a math-pro (surely) but I suppose that for other issues like non-round arcs this probably requires some functions to calculate tangency of the future "slices".

Sorry if I give some not smart advices but these are just my ideas.%%%

%%%Hi, Howard! Thank you! Now it works in simple cases. I think maybe you know about another problem but for some case I'm attaching the new file. Bevel_distorts_Mesh_2.blend There if you'll bevel selected loops it will give distorted surfaces and wrong forms of circles (bevel shape). I thought about the design... Check approach_thought1.blend When you scale points "B" and "C" about the Cursor they "prove" the flatness of the "formed" faces around point "A". So there is the angle "A-Cursor-B" - these edges form the triangle (at least virtually). And there is the virtual angle "D"="LocalZAxis-Cursor-B" If we'll set the Cursor to "A" so it will be the Cursor now and there will be the new "A", "B" and "C" (adjacent points). So here will be new "D"="[D2](https://archive.blender.org/developer/D2)" And obviously if it's equal to D than the face is planar. By the same approach can be checked the face on another side of the edge to be beveled. The idea is that bevel components here can be flattened (or projected probably) on these faces if they (faces) are flat. I'm not a math-pro (surely) but I suppose that for other issues like non-round arcs this probably requires some functions to calculate tangency of the future "slices". Sorry if I give some not smart advices but these are just my ideas.%%%

%%%P.S. Sorry for bothering you...
Just in a case that maybe you didn't seen this (I can't be 100% sure you did):

https://github.com/Obijuan/obiscad

There is the Bevel module. I've looked into it but didn't understood a lot :D There is some code (not a lot). Maybe you'll get some ideas looking into it.%%%

%%%P.S. Sorry for bothering you... Just in a case that maybe you didn't seen this (I can't be 100% sure you did): https://github.com/Obijuan/obiscad There is the Bevel module. I've looked into it but didn't understood a lot :D There is some code (not a lot). Maybe you'll get some ideas looking into it.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33906
No description provided.